Added footer print header to theme and added hide footer css,  updated print css

--- a/docroot/themes/custom/sata/templates/region/region--footer-first.html.twig
+++ b/docroot/themes/custom/sata/templates/region/region--footer-first.html.twig
@@ -15,6 +15,7 @@
 
 <div{{ attributes }}>
   <div{{ content_attributes }}>
+    <div class="node--type-product__accordion-content-header block-footer-navigation-block__footer-address-print-header">{{ 'Need More Information'|t }}</div>
     {{ content }}
   </div>
 </div>
