--- a/source/themes/custom/sata/styles/libraries/region/footer.scss
+++ b/source/themes/custom/sata/styles/libraries/region/footer.scss
@@ -43,6 +43,10 @@ $footer-margin-top: 5em;
         color: $white !important;
       }
     }
+
+    .block-footer-navigation-block__footer-address-print-header {
+      display: none !important;
+    }
   }
 
   .block-footer-navigation-block__nav {
