--- a/source/themes/custom/sata/styles/libraries/node/full--product-print.scss
+++ b/source/themes/custom/sata/styles/libraries/node/full--product-print.scss
@@ -33,6 +33,7 @@
   .product-detail-content-container .field--name-field-product-features,
   .download-images-link,
   .node--type-product-tabs__nav-wrapper,
+  .node--type-product-tabs__mobile-nav-item,
   .node--type-product-tabs__mobile-nav-item::after,
   #reviews-questions,
   .more-features-link,
@@ -61,18 +62,14 @@
 
   .product-detail-content-container__title h1 {
     color: $type-dark !important;
-    font-size: 40px;
-    line-height: 48px;
+    font-size: 40px !important;
+    line-height: 48px !important;
+    margin: 0 !important;
   }
 
   #specifications,
   #features {
     display: block !important;
-  }
-
-  .node--type-product-tabs-tab {
-    display: table !important;
-    break-after: avoid !important;
   }
 
   .node--type-product-tabs__mobile-nav-item,
@@ -82,6 +79,15 @@
     &:last-of-type {
       border-bottom: unset !important;
     }
+  }
+
+  .node--type-product-tabs__mobile-nav-item {
+    padding: 0 !important;
+  }
+
+  .node--type-product-tabs-tab {
+    display: table !important;
+    break-after: avoid !important;
   }
 
   .node--type-product__page-top {
@@ -116,39 +122,36 @@
   }
 
   .field--name-field-product-features {
-    padding-left: 0;
-    margin: 0;
+    padding-left: 0 !important;
+    margin: 0 !important;
   }
 
   .node--type-product__accordion-content-header {
     margin-bottom: 10px !important;
-  }
-
-  .field--name-field-product-specifications {
-    columns: 2 auto;
+    display: block !important;
   }
 
   .field--name-field-product-features,
   .field--name-field-set-components,
   .field--name-field-product-specifications {
     > .field__item {
-      padding-left: 5px;
-      list-style-position: inside;
+      padding-left: 5px !important;
+      padding-right: 5px !important;
+      list-style-position: inside !important;
 
       &:nth-child(odd) {
-        background-color: #E9ECEB;
+        background-color: #E9ECEB !important;
       }
     }
+  }
+
+  .field--name-field-product-specifications {
+    columns: 2 auto !important;
   }
 
   .node--type-product-tabs__content {
     padding-top: 26px !important;
     padding-bottom: 0 !important;
-  }
-
-  .node--type-product-tabs__mobile-nav-item {
-    font-size: 24px !important;
-    text-transform: uppercase !important;
   }
 
   .product-set-components,
@@ -158,10 +161,17 @@
   }
 
   .region-footer {
+    @include container();
     background: unset !important;
 
     .region-footer__inner-container {
       display: block !important;
+      width: 100% !important;
+      left: unset !important;
+    }
+
+    .region-footer-first {
+      padding: 0 !important;
     }
   }
 
@@ -170,13 +180,13 @@
   }
 
   .block-footer-navigation-block__footer-address-print-header {
-    display: block;
-    color: $type-dark;
-    text-transform: uppercase;
-    font-weight: $fw-extra-bold;
-    font-size: 24px;
-    font-family: $font-brand;
-    line-height: 39px;
+    display: block !important;
+    color: $type-dark !important;
+    text-transform: uppercase !important;
+    font-weight: $fw-extra-bold !important;
+    font-size: 24px !important;
+    font-family: $font-brand !important;
+    line-height: 39px !important;
   }
 
   .region-footer .region-footer-first a,
@@ -193,6 +203,29 @@
   }
 
   @page {
-    margin: 1cm;
+    margin: 1cm !important;
+  }
+
+  @include media('<=xl') {
+    .region-header__content {
+      height: $header-height !important;
+    }
+  }
+
+  @include media('<=lg-plus') {
+    .region-header .block--header-branding .site-logo svg:last-of-type {
+      display: inline !important;
+    }
+
+    .region-footer-first {
+      left: unset !important;
+      background-color: transparent !important;
+      padding: 0 16px !important;
+      margin-left: auto !important;
+      margin-right: auto !important;
+      max-width: 75em !important;
+      width: 100% !important;
+      color: $type-dark !important;
+    }
   }
 }
