--- a/source/themes/custom/sata/styles/libraries/region/footer.scss
+++ b/source/themes/custom/sata/styles/libraries/region/footer.scss
@@ -45,7 +45,7 @@ $footer-margin-top: 5em;
     }
 
     .block-footer-navigation-block__footer-address-print-header {
-      display: none !important;
+      display: none;
     }
   }
 
