changed check marks to white

--- a/source/themes/custom/sata/styles/contrib-overrides/hubspot/hubspot.scss
+++ b/source/themes/custom/sata/styles/contrib-overrides/hubspot/hubspot.scss
@@ -170,7 +170,7 @@ $input-height: 3.75rem;
     input[type='checkbox']:not(:checked) + span.form-required:after,
     input[type='checkbox']:not(:checked) + span:after {
       @include icon-styles;
-      color: $type-dark !important;
+      color: $white !important;
       content: icon-char(checkmark);
       font-size: rem(10px) !important;
       height: $active-width !important;
