feature/VYRKCATG-534: Made the search icon a clickable button.

--- a/docroot/modules/custom/sata_core/templates/block--header-search.html.twig
+++ b/docroot/modules/custom/sata_core/templates/block--header-search.html.twig
@@ -41,7 +41,9 @@
   <div{{ content_attributes.setAttribute('id', 'header-search--content') }}>
     <form action="/search" method="GET">
       <input type="text" name="search" placeholder="{{ 'Type something'|t }}" />
-      {% include directory ~ '/icons/search.svg' %}
+      <button>
+        {% include directory ~ '/icons/search.svg' %}
+      </button>
     </form>
   </div>
 
