Changed region utility twig to only show when content is available, Updated header and sticky product banner css for top position with and without utility nav

--- a/docroot/themes/custom/sata/templates/region/region--utility-area.html.twig
+++ b/docroot/themes/custom/sata/templates/region/region--utility-area.html.twig
@@ -15,10 +15,12 @@
 
 {% set classes = [] %}
 
-<div{{ attributes.addClass(classes) }}>
-  <div{{ create_attribute({'class': ['region-utility-area__inner']}) }}>
-    <div{{ content_attributes }}>
-      {{ content }}
+{% if content %}
+  <div{{ attributes.addClass(classes) }}>
+    <div{{ create_attribute({'class': ['region-utility-area__inner']}) }}>
+      <div{{ content_attributes }}>
+        {{ content }}
+      </div>
     </div>
   </div>
-</div>
+{% endif %}
