--- a/source/themes/custom/sata/styles/libraries/block/product-buy-now-sticky.scss
+++ b/source/themes/custom/sata/styles/libraries/block/product-buy-now-sticky.scss
@@ -4,11 +4,49 @@
 
 @import '../../globals';
 
+.region-utility-area {
+  ~ .region-pre-content .block-product-buy-now-sticky__content.show--with-nav {
+    &.show--with-nav {
+      top: 5.5rem !important;
+
+      @media (min-width: 595px) and (max-width: 979px) {
+        .user-logged-in & {
+          top: 8rem !important;
+        }
+      }
+
+      @media (min-width: 980px) and (max-width: 1154px) {
+        .user-logged-in & {
+          top: 10.5rem !important;
+        }
+      }
+
+      @media (min-width: 1155px) {
+        .user-logged-in & {
+          top: 11.3rem !important;
+        }
+
+        .user-logged-in.toolbar-tray-open & {
+          top: 10.5rem !important;
+        }
+      }
+
+      @include media('>=xl') {
+        top: 9.3rem !important;
+
+        .user-logged-in.toolbar-tray-open & {
+          top: 14.3rem !important;
+        }
+      }
+    }
+  }
+}
+
 .block-product-buy-now-sticky__content {
   @include container-full-width();
 
   position: fixed;
-  top: -4.8rem;
+  top: -7rem;
   z-index: 500;
 
   -webkit-transition-timing-function: ease-in-out;
@@ -17,7 +55,7 @@
   transition: 0.25s;
 
   &.show--no-nav {
-    top: 1.8rem;
+    top: 1.7rem;
 
     @media (min-width: 595px) and (max-width: 1154px) {
       .user-logged-in & {
@@ -37,25 +75,39 @@
   }
 
   &.show--with-nav {
-    top: 9.3rem;
+    top: 5.5rem;
 
-    @include media('<md') {
-      top: 5.5rem;
+    @media (min-width: 595px) and (max-width: 979px) {
+      .user-logged-in & {
+        top: 8rem;
+      }
     }
 
-    @media (min-width: 595px) and (max-width: 1154px) {
+    @media (min-width: 980px) and (max-width: 1154px) {
       .user-logged-in & {
-        top: 11.3rem;
+        top: 10.5rem;
       }
     }
 
     @media (min-width: 1155px) {
       .user-logged-in & {
-        top: 11.3rem;
+        top: 7.9rem;
       }
 
       .user-logged-in.toolbar-tray-open & {
-        top: 14.25rem; // +2.5rem
+        top: 10.5rem;
+      }
+    }
+
+    @include media('>=xl') {
+      top: 6.8rem;
+
+      .user-logged-in & {
+        top: 9.2rem;
+      }
+
+      .user-logged-in.toolbar-tray-open & {
+        top: 11.8rem;
       }
     }
   }
