Added modal to featured media grid: added jquery modal to libraries, added preprocess, fixed position css and added z-index to modal css, added position to media page thumbnail, changed space in GW full content to clear linting error

--- a/source/themes/custom/sata/styles/libraries/node/full--media-page.scss
+++ b/source/themes/custom/sata/styles/libraries/node/full--media-page.scss
@@ -50,6 +50,10 @@
         padding-top: 2rem;
         position: relative;
 
+        .field--name-thumbnail {
+          position: relative;
+        }
+
         iframe {
           position: absolute;
           top: 0;
