--- a/source/themes/custom/sata/styles/libraries/media/modal.scss
+++ b/source/themes/custom/sata/styles/libraries/media/modal.scss
@@ -19,9 +19,9 @@
     .play-icon {
       cursor: pointer;
       position: absolute;
-      top: 38%;
+      top: 50%;
       left: 50%;
-      transform: translate(-50%, 75%);
+      transform: translate(-50%, -50%);
       background-color: #000000;
       height: 40px;
       border-radius: 10px;
@@ -36,5 +36,9 @@
         transition: background-color 300ms linear;
       }
     }
+  }
+
+  .micromodal-slide.is-open {
+    z-index: 99999999999 !important;
   }
 }
