added position for thumbnail to featured media grid layout styling

--- a/source/themes/custom/sata/styles/libraries/paragraph/full--featured-media--layout-grid.scss
+++ b/source/themes/custom/sata/styles/libraries/paragraph/full--featured-media--layout-grid.scss
@@ -37,6 +37,10 @@
       @include grid-col(12);
       @include grid-clear-vertical-spacing();
 
+      .field--name-thumbnail {
+        position: relative;
+      }
+
       @include media('>=#{$bp-sm}', '<#{$bp-lg}') {
         @include grid-col(6);
         @include grid-clear-vertical-spacing(2);
