--- a/source/themes/custom/sata/styles/libraries/node/full--product-print.scss
+++ b/source/themes/custom/sata/styles/libraries/node/full--product-print.scss
@@ -65,7 +65,7 @@
 
   .product-detail-content-container__title h1 {
     color: $type-dark !important;
-    font-size: 40px !important;
+    font-size: 30pt !important;
     line-height: 48px !important;
     margin: 0 !important;
   }
@@ -188,7 +188,7 @@
     color: $type-dark !important;
     text-transform: uppercase !important;
     font-weight: $fw-extra-bold !important;
-    font-size: 24px !important;
+    font-size: 18pt !important;
     font-family: $font-brand !important;
     line-height: 39px !important;
   }
@@ -197,7 +197,7 @@
   .block-footer-navigation-block__footer-address p {
     color: $type-dark !important;
     font-weight: $fw-regular !important;
-    font-size: 16px !important;
+    font-size: 12pt !important;
     line-height: 26px !important;
   }
 
@@ -206,15 +206,42 @@
     margin-top: 0 !important;
   }
 
+  /* Defining all page breaks */
+
+  a,
+  blockquote,
+  table,
+  pre,
   .block-footer-navigation-block__footer-address {
-    p {
-      page-break-inside: avoid;
-    }
+    page-break-inside: avoid !important;
+  }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  .block-footer-navigation-block__footer-address-print-header {
+    page-break-after: avoid !important;;
+    page-break-inside: avoid !important;;
+  }
+
+  img {
+    page-break-inside: avoid !important;;
+    page-break-after: avoid !important;;
+  }
+
+  ul,
+  ol,
+  dl,
+  .field__item {
+    page-break-before: avoid !important;;
   }
 
   @page {
     size: auto;
-    margin: 0;
+    margin: .35in 0;
   }
 
   @include media('<=xl') {
