Added important to page breaks

--- a/source/themes/custom/sata/styles/libraries/node/full--product-print.scss
+++ b/source/themes/custom/sata/styles/libraries/node/full--product-print.scss
@@ -223,20 +223,20 @@
   h5,
   h6,
   .block-footer-navigation-block__footer-address-print-header {
-    page-break-after: avoid !important;;
-    page-break-inside: avoid !important;;
+    page-break-after: avoid !important;
+    page-break-inside: avoid !important;
   }
 
   img {
-    page-break-inside: avoid !important;;
-    page-break-after: avoid !important;;
+    page-break-inside: avoid !important;
+    page-break-after: avoid !important;
   }
 
   ul,
   ol,
   dl,
   .field__item {
-    page-break-before: avoid !important;;
+    page-break-before: avoid !important;
   }
 
   @page {
