--- a/source/themes/custom/sata/styles/libraries/paragraph/full--content-callout.scss
+++ b/source/themes/custom/sata/styles/libraries/paragraph/full--content-callout.scss
@@ -17,17 +17,68 @@
 .component-content-callout {
   @include container-full-width();
 
+  &.component-content-callout__layout-straight {
+    .component-content-callout__content-wrapper {
+      border-bottom: rem(20px) solid $primary-solar;
+
+      @include media('>=lg-plus') {
+        border-bottom: rem(20px) solid $primary-solar;
+      }
+    }
+  }
+
+  &.component-content-callout__layout-blade {
+    .component-content-callout__content-blade {
+      display: block !important;
+      position: absolute;
+      bottom: -1px;
+      left: 0;
+      width: 100%;
+      height: auto;
+      z-index: 3;
+
+      .component-content-callout__content-blade--tab,
+      .component-content-callout__content-blade--desktop {
+        display: none;
+      }
+
+      @include media('>=sm') {
+        .component-content-callout__content-blade--tab {
+          display: block;
+        }
+
+        .component-content-callout__content-blade--mobile {
+          display: none;
+        }
+      }
+
+      @include media('>=lg-plus') {
+        .component-content-callout__content-blade--desktop {
+          display: block;
+        }
+
+        .component-content-callout__content-blade--tab {
+          display: none;
+        }
+      }
+    }
+  }
+
   .component-content-callout__content-wrapper {
     position: relative;
 
+    .component-content-callout__content-blade {
+      display: none;
+    }
+
     @include media('<lg-plus') {
       background-color: $primary-emerald;
-      border-bottom: rem(20px) solid $primary-solar;
     }
   }
 
   .component-content-callout__content--position {
     @include container();
+    z-index: 5;
 
     .component-content-callout__content {
       @include media('>=lg-plus') {
@@ -55,6 +106,8 @@
         font-size: rem(52px);
         line-height: rem(48px);
         margin-bottom: rem(20px);
+        position: relative;
+        z-index: 5;
 
         @include media('<lg-plus') {
           font-size: rem(40px);
@@ -67,15 +120,19 @@
         font-weight: $fw-regular;
         line-height: rem(24px);
         margin-bottom: rem(28px);
+        position: relative;
+        z-index: 5;
 
         @include media('<lg-plus') {
-          font-size: rem(14);
-          line-height: rem(24);
+          font-size: rem(14px);
+          line-height: rem(24px);
         }
       }
 
       .field--name-field-link {
         text-align: left;
+        position: relative;
+        z-index: 5;
       }
 
       .field--name-field-link a {
@@ -86,6 +143,7 @@
 
   .blazy {
     width: 100%;
+    z-index: 1;
 
     &.field[data-blazy] {
       min-width: 100%;
@@ -104,7 +162,7 @@
     &.component-content-callout__color-theme--emerald {
       .component-content-callout__content {
         background-color: $primary-emerald;
-        padding: rem(20px 90px 30px 30px);
+        padding: rem(20px 30px 30px);
         max-width: rem(570px);
       }
     }
