Updated blade img width to 100%

--- a/source/themes/custom/sata/styles/libraries/paragraph/full--content-callout.scss
+++ b/source/themes/custom/sata/styles/libraries/paragraph/full--content-callout.scss
@@ -37,6 +37,10 @@
       height: auto;
       z-index: 3;
 
+      img {
+        width: 100%;
+      }
+
       .component-content-callout__content-blade--tab,
       .component-content-callout__content-blade--desktop {
         display: none;
