--- a/source/themes/custom/sata/styles/libraries/paragraph/full--content-callout.scss
+++ b/source/themes/custom/sata/styles/libraries/paragraph/full--content-callout.scss
@@ -68,6 +68,25 @@
     }
   }
 
+  &.component-content-callout__color-theme--emerald {
+    .component-content-callout__content {
+      @include media('>=lg-plus') {
+        background-color: $primary-emerald;
+        padding: rem(20px 30px 30px);
+        max-width: rem(570px) !important;
+      }
+
+      @include media('>=lg-plus', '<=1180px') {
+        max-width: rem(500px) !important;
+        padding: rem(15px);
+
+        .component-content-callout__title {
+          margin-top: 0 !important;
+        }
+      }
+    }
+  }
+
   .component-content-callout__content-wrapper {
     position: relative;
 
@@ -113,7 +132,7 @@
         position: relative;
         z-index: 5;
 
-        @include media('<lg-plus') {
+        @include media('<=1180px') {
           font-size: rem(40px);
           line-height: rem(48px);
         }
@@ -127,7 +146,7 @@
         position: relative;
         z-index: 5;
 
-        @include media('<lg-plus') {
+        @include media('<=1180px') {
           font-size: rem(14px);
           line-height: rem(24px);
         }
@@ -161,15 +180,6 @@
       display: none;
     }
   }
-
-  @include media('>=lg-plus') {
-    &.component-content-callout__color-theme--emerald {
-      .component-content-callout__content {
-        background-color: $primary-emerald;
-        padding: rem(20px 30px 30px);
-        max-width: rem(570px);
-      }
-    }
-  }
 }
+
 
