--- a/source/themes/custom/sata/styles/libraries/node/full--product-print.scss
+++ b/source/themes/custom/sata/styles/libraries/node/full--product-print.scss
@@ -49,8 +49,12 @@
     display: none !important;
   }
 
-  body.toolbar-loading {
-    padding-top: 0 !important;
+  body {
+    font-size: 11pt;
+
+    &.toolbar-loading {
+      padding-top: 0 !important;
+    }
   }
 
   .page {
@@ -61,13 +65,37 @@
     position: unset !important;
     print-color-adjust: exact; // sass-lint:disable-line no-misspelled-properties
     -webkit-print-color-adjust: exact; // sass-lint:disable-line no-misspelled-properties
+
+    &::after {
+      display: none !important;
+    }
+
+    .uploaded-logo {
+      width: 100px !important;
+    }
+
+    .tagline {
+      img {
+        max-width: 130px !important;
+      }
+    }
+
+    .region-header__content {
+      height: 50px !important;
+    }
   }
 
-  .product-detail-content-container__title h1 {
-    color: $type-dark !important;
-    font-size: 30pt !important;
-    line-height: 48px !important;
-    margin: 0 !important;
+  .product-detail-content-container__title {
+    h1 {
+      color: $type-dark !important;
+      font-size: 20pt !important;
+      line-height: 40px !important;
+      margin: 0 !important;
+    }
+
+    .sku {
+      font-size: 11pt;
+    }
   }
 
   #specifications,
@@ -104,7 +132,7 @@
     .swiper-slide {
       &.swiper-slide-active,
       &:only-child {
-        width: 440px !important;
+        width: 250px !important;
       }
 
       &:not(:only-child):not(.swiper-slide-active) {
@@ -118,7 +146,7 @@
   .product-detail-content-container {
     order: 1 !important;
     margin-bottom: 20px !important;
-    padding-top: 40px !important;
+    padding-top: 20px !important;
   }
 
   .node--type-product__accordion-content {
@@ -133,6 +161,7 @@
   .node--type-product__accordion-content-header {
     margin-bottom: 10px !important;
     display: block !important;
+    font-size: 15pt !important;
   }
 
   .field--name-field-product-features,
@@ -161,7 +190,7 @@
   .product-set-components,
   #specifications,
   .region-footer {
-    margin-top: 64px !important;
+    margin-top: 40px !important;
   }
 
   .region-footer {
@@ -188,7 +217,7 @@
     color: $type-dark !important;
     text-transform: uppercase !important;
     font-weight: $fw-extra-bold !important;
-    font-size: 18pt !important;
+    font-size: 15pt !important;
     font-family: $font-brand !important;
     line-height: 39px !important;
   }
@@ -197,7 +226,7 @@
   .block-footer-navigation-block__footer-address p {
     color: $type-dark !important;
     font-weight: $fw-regular !important;
-    font-size: 12pt !important;
+    font-size: 11pt !important;
     line-height: 26px !important;
   }
 
